--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 body{
-  font-family:"Helvetica Neue",Helvetica, "microsoft yahei", arial, STHeiTi, sans-serif;
+  font:12px/1.5 tahoma,arial,'Hiragino Sans GB','\5b8b\4f53',sans-serif;
   background-color:#19a97b
 }
 a{
